# zabbix-kerio-connect

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  pyproject.toml
docs/: api_fields.md  setup.md
src/: kerio_collector.py  lld_services.js  master_collector.js
template/kerio_connect_agent/: template_app_kerio_connect_agent.yaml
template/kerio_connect_agent/zabbix_agent2.d/: kerio_connect.conf
template/kerio_connect_script/: template_app_kerio_connect_script.yaml
tests/: conftest.py  test_collector.py  test_deployment.py  test_live_api.py  test_templates.py
tests/fixtures/: kerio_connect.conf
tools/: generate_uuids.py  sync_template_js.py
